syncrator-openshift/init_env_solr.yaml
apiVersion: template.openshift.io/v1
kind: Template
metadata:
  name: solr
objects:
- apiVersion: v1
  kind: StatefulSet
  metadata:
    name: solr-01-${ENV}
  spec:
    podManagementPolicy: OrderedReady
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: solr-01-${ENV}
    template:
      metadata:
        labels:
          app: solr-01-${ENV}
      spec:
        containers:
        - env:
          - name: SOLR_HOME
            value: /store/data
          - name: SOLR_PORT
            value: 2080
          - name: ZK_HOST
            value: zookeeper-service-${ENV}:2181
          - name: SOLR_HOST
            value: solr-01-${ENV}
          - name: SOLR_LOGS_DIR
            value: /store/logs
          image: solr:${SOLR_VERSION_MAJ}
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /solr
              port: 2080
            initialDelaySeconds: 60
            timeoutSeconds: 13
          name: solr-${ENV}
          ports:
          - containerPort: 2080
            name: solr-port
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/bash
              - -c
              - echo > /dev/tcp/zookeeper-service-${ENV}/2181
            initialDelaySeconds: 50
            timeoutSeconds: 10
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /store
            name: solrdata
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext:
          anyuid: true
          readOnlyRootFilesystem: false
          runAsUser: 8983
        terminationGracePeriodSeconds: 10
        volumes:
        - name: solrdata
          persistentVolumeClaim:
            claimName: task-solr-pv-claim
    updateStrategy:
      rollingUpdate:
        partition: 0
      type: RollingUpdate
    volumeClaimTemplates:
    - metadata:
        creationTimestamp: null
        name: solrdata
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: ${disksize}
      status:
        phase: Pending
  status:
    collisionCount: 0
    currentReplicas: 1
    currentRevision: solr-ss-bc744d6c4
    observedGeneration: 3
    readyReplicas: 1
    replicas: 1
    updateRevision: solr-ss-bc744d6c4
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    creationTimestamp: null
    generation: 3
    name: solr-02-ss-${ENV}
  spec:
    podManagementPolicy: OrderedReady
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: solr-02-app-${ENV}
    serviceName: solr-02-${ENV}
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: solr-02-app-${ENV}
      spec:
        containers:
        - env:
          - name: SOLR_HOME
            valueFrom:
              configMapKeyRef:
                key: solrHome
                name: solr-02-config-${ENV}
          - name: SOLR_PORT
            valueFrom:
              configMapKeyRef:
                key: solrPort
                name: solr-02-config-${ENV}
          - name: ZK_HOST
            valueFrom:
              configMapKeyRef:
                key: zkHost
                name: solr-02-config-${ENV}
          - name: SOLR_HOST
            valueFrom:
              configMapKeyRef:
                key: solrHost
                name: solr-02-config-${ENV}
          - name: SOLR_LOGS_DIR
            valueFrom:
              configMapKeyRef:
                key: solrLogsDir
                name: solr-02-config-${ENV}
          image: solr:${SOLR_VERSION_MAJ}
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /solr
              port: 2081
            initialDelaySeconds: 60
            timeoutSeconds: 13
          name: solr-${ENV}
          ports:
          - containerPort: 2081
            name: http
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/bash
              - -c
              - echo > /dev/tcp/zookeeper-service-${ENV}/2181
            initialDelaySeconds: 50
            timeoutSeconds: 10
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /store
            name: solrdata
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext:
          anyuid: true
          readOnlyRootFilesystem: false
          runAsUser: 8983
        terminationGracePeriodSeconds: 10
        volumes:
        - name: solrdata
          persistentVolumeClaim:
            claimName: task-solr-pv-claim
    updateStrategy:
      rollingUpdate:
        partition: 0
      type: RollingUpdate
    volumeClaimTemplates:
    - metadata:
        creationTimestamp: null
        name: solrdata
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: ${disksize}
      status:
        phase: Pending
  status: null
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    creationTimestamp: null
    generation: 1
    name: zookeeper-ss-${ENV}
  spec:
    podManagementPolicy: OrderedReady
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: zookeeper-app-${ENV}
    serviceName: zookeeper-service-${ENV}
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: zookeeper-app-${ENV}
      spec:
        containers:
        - env:
          - name: ZOO_MY_ID
            valueFrom:
              configMapKeyRef:
                key: zooMyId
                name: zookeeper-config-${ENV}
          - name: ZOO_LOG_DIR
            valueFrom:
              configMapKeyRef:
                key: zooLogDir
                name: zookeeper-config-${ENV}
          - name: ZOO_DATA_DIR
            valueFrom:
              configMapKeyRef:
                key: zooDataDir
                name: zookeeper-config-${ENV}
          - name: ZOO_DATA_LOG_DIR
            valueFrom:
              configMapKeyRef:
                key: zooDataLogDir
                name: zookeeper-config-${ENV}
          - name: ZOO_PORT
            valueFrom:
              configMapKeyRef:
                key: zooPort
                name: zookeeper-config-${ENV}
          image: zookeeper:latest
          imagePullPolicy: Always
          name: zookeeper-${ENV}
          ports:
          - containerPort: 2181
            name: zookeeper-port
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /store
            name: volzookeeper-${ENV}
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext:
          privileged: true
          readOnlyRootFilesystem: false
        terminationGracePeriodSeconds: 10
        volumes:
        - name: volzookeeper-${ENV}
          persistentVolumeClaim:
            claimName: task-zookeeper-pv-claim
    updateStrategy:
      rollingUpdate:
        partition: 0
      type: RollingUpdate
    volumeClaimTemplates:
    - metadata:
        creationTimestamp: null
        name: volzookeeper-${ENV}
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
      status:
        phase: Pending
  status:
    collisionCount: 0
    currentReplicas: 1
    currentRevision: zookeeper-ss-7bdbcb8cb
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updateRevision: zookeeper-ss-7bdbcb8cb
    updatedReplicas: 1
- apiVersion: v1
  data:
    solrHome: /store/data
    solrHost: solr-01-${ENV}
    solrLogsDir: /store/logs
    solrPort: "2080"
    zkHost: zookeeper-service-${ENV}:2181
  kind: ConfigMap
  metadata:
    creationTimestamp: null
    name: solr-01-config-${ENV}
- apiVersion: v1
  data:
    solrHome: /store/data
    solrHost: solr-02-${ENV}
    solrLogsDir: /store/logs
    solrPort: "2081"
    zkHost: zookeeper-service-${ENV}:2181
  kind: ConfigMap
  metadata:
    creationTimestamp: null
    name: solr-02-config-${ENV}
- apiVersion: v1
  data:
    zooDataDir: /store/data
    zooDataLogDir: /store/datalog
    zooLogDir: /store/logs
    zooMyId: "1"
    zooPort: "2181"
  kind: ConfigMap
  metadata:
    creationTimestamp: null
    name: zookeeper-config-${ENV}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    name: solr-01-${ENV}
  spec:
    ports:
    - name: http
      port: 2080
      protocol: TCP
      targetPort: 2080
    selector:
      app: solr-01-app-${ENV}
    sessionAffinity: None
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    name: solr-02-${ENV}
  spec:
    ports:
    - name: http
      port: 2081
      protocol: TCP
      targetPort: 2081
    selector:
      app: solr-02-app-${ENV}
    sessionAffinity: None
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    name: zookeeper-service-${ENV}
  spec:
    ports:
    - port: 2181
      protocol: TCP
      targetPort: 2181
    selector:
      app: zookeeper-app-${ENV}
    sessionAffinity: None
  status:
    loadBalancer: {}
parameters:
- name: ENV
  value: qas
- name: SOLR_VERSION_MAJ
  value: "6"
- name: disksize
  value: 20Gi
